2009-04-03   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: @part is stopped by an appendix.
	Use part as section target, if the section is associated with 
	a part.

2009-03-31   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: handle part in html. 
	@part are associated with the following sectionning command,
	like @chapter.
	nodes associated with @part are associated with this sectionning
	command too. 
	@part are not included in the toplevelnext and toplevelprev 
	chains and these directions are used for node next and prev, 
	bypassing @part.
	* formats/html.init: add a rule after a @part.
	* texi2html.init: add back some default definitions for 
	all the layout subroutines, in case they are used in user-defined 
	functions and not defined in the default format.

2009-03-28   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl, formats/info.init, formats/docbook.init, 
	formats/xml.init: handle @part in info, xml and docbook.
	* texi2html.pl, formats/docbook.init, formats/xml.init: 
	use childnext, the next child element of an element, instead
	of sectionnext to determine if an element has to be closed
	in docbook or xml. This fixes the tree when there is first a
	low-level element before an upper level element.

2009-03-20   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: new option --program to change defaults
	according to that option.
	* texi2html.init: treat raw text format as a regular
	format, with an initialization function.
	Don't double the prepended text in itemize if it is 
	an @-command and don't do anything with 
	%special_list_commands.

2009-03-16   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: error out when there are multiple @menu in 
	a node. Fix http://savannah.gnu.org/bugs/?8432.
	* texi2html.init: prepend a ; to thorn entity.
	* formats/docbook.init: no &lsaquo; nor &rsaquo;, replace with
	&gt;, &lt;.
	* Makefile.am: always create the i18n directory.
	Do a specific target for the po_document file to run update-po,