@@ -1,0 +1,6 @@
+format_in_titlepage.texi(,2) @c %**start of header
+format_in_titlepage.texi(,3) @setfilename format_in_titlepage.info
+format_in_titlepage.texi(,4) @c %**end of header
+format_in_titlepage.texi(,5) 
+format_in_titlepage.texi(,13) 
+format_in_titlepage.texi(,14) @bye
