@@ -1,0 +1,14 @@
+\input texinfo	@c -*-texinfo-*-
+@c %**start of header
+@setfilename format_in_titlepage.info
+@c %**end of header
+
+@titlepage
+
+@format
+Published
+@end format
+
+@end titlepage
+
+@bye
