@@ -1,0 +1,3 @@
+This is format_in_titlepage.info, produced by makeinfo version 4.13 from
+format_in_titlepage.texi.
+
