@@ -1,0 +1,7 @@
+\input texinfo	@c -*-texinfo-*-
+@c %**start of header
+@setfilename format_in_titlepage.info
+@c %**end of header
+
+
+@bye
