@@ -1,3 +1,8 @@
+2009-04-21   Patrice Dumas  <pertusus@free.fr>
+
+	* texi2html.pl: really initialize state when formatting special
+	regions outside of document.
+
 2009-04-03   Patrice Dumas  <pertusus@free.fr>
 
 	* texi2html.pl: @part is stopped by an appendix.
